<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Water Light Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="agua">Água</string>
    <string name="luz">Luz</string>
    <string name="title_activity_tela_principal_agua">TelaPrincipalAgua</string>
    <string name="title_activity_tela_principal_luz">TelaPrincipalLuz</string>
    <string name="title_activity_tela_menu">TelaMenu</string>
    <string name="gastoAtual">Gasto atual</string>
    <string name="valorAtual">Valor atual</string>
    <string name="MediaValorFinal">Média final</string>
    <string name="atualizar">Atualizar</string>
    <string name="estatistica">Estatistica completa</string>
    <string name="dadosIndisponiveis">Dados indisponiveis</string>
    <string name="title_activity_tela_de_estatisticas">TelaDeEstatisticas</string>
    <string name="Gastohj">Gasto de hoje</string>
    <string name="rs">R$</string>
    <string name="na">-</string>
    <string name="zero">0.00</string>
    <string name="mesPassado">Mês passado</string>
    <string name="dia">Dia</string>
    <string name="mes">Mes</string>
    <string name="ano">Ano</string>
    <string name="historico">Histórico</string>
    <string name="gasto">Gasto</string>
    <string name="title_activity_tela_login">TelaLogin</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="residencia">Residencia</string>
    <string name="logoff">Logoff</string>
    <string name="config">Configurações</string>
    <string name="title_activity_tela_configuracao_sistema">Tela_configuracao_sistema</string>
    <string name="tipoAtualizacao">Atualizar os dados de consumo uma vez por:</string>
    <string name="title_activity_tela_configuracao_aplicativo">Tela_configuracao_aplicativo</string>
    <string name="title_activity_tela_grafico_anual">TelaGraficoAnual</string>
    <string name="vlrTarAgua">Valor da tarifa de Água</string>
    <string name="vlrTarLuz">Valor da tarifa de Luz</string>
    <string name="voltagemResidencia">Voltagem da residencia</string>
    <string name="gerarGrafico">Gerar gráfico</string>
    <string name="tipoGrafico">Gráfico baseado</string>
    <string name="title_activity_tela_relatorio">telaRelatorio</string>
    <string name="title_activity_funcao_implantacao">Funcao_implantacao</string>
</resources>
