<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaDeHistorico" >

    <ImageView
        android:id="@+id/imgRecurso"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/icone_luz" />

    <TextView
        android:id="@+id/txtNomeRecurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgRecurso"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/imgRecurso"
        android:text="@string/dadosIndisponiveis"
        android:textSize="@dimen/tamanho20dp" />

    <View
        android:id="@+id/Divisor1"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/imgRecurso"
        android:background="#A8A8A8" />

    <TextView
        android:id="@+id/mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgRecurso"
        android:layout_marginTop="30dp"
        android:text="@string/mes" />

    <Spinner
        android:id="@+id/spMes"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgRecurso"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/mes" />

    <TextView
        android:id="@+id/ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mes"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/spMes"
        android:text="@string/ano" />

    <Spinner
        android:id="@+id/spAno1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgRecurso"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/ano" />

    <TextView
        android:id="@+id/gastoHj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mes"
        android:layout_marginTop="20dp"
        android:text="@string/gasto" />

    <TextView
        android:id="@+id/txtGastoHj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gastoHj"
        android:layout_alignBottom="@+id/gastoHj"
        android:layout_toRightOf="@+id/gastoHj"
        android:layout_marginLeft="20dp"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/R$GastoHj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtGastoHj"
        android:layout_alignBottom="@+id/txtGastoHj"
        android:layout_toRightOf="@+id/txtGastoHj"
        android:layout_marginLeft="20dp"
        android:text="@string/rs" />

    <TextView
        android:id="@+id/txtR$GastoHj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/R$GastoHj"
        android:layout_alignBottom="@+id/R$GastoHj"
        android:layout_toRightOf="@+id/R$GastoHj"
        android:layout_marginLeft="20dp"
        android:text="@string/zero" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gráfico"
        android:id="@+id/btnGrafico"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>